# Find all headers and sources (no updates to this file necessary!)
FILE(GLOB GDEV_HEADERS *.hpp)
FILE(GLOB GDEV_SOURCES *.cpp)

IF(CMAKE_VERBOSE_CONFIGURE)
  MESSAGE("GDEV_HEADERS = ${GDEV_HEADERS}")
  MESSAGE("GDEV_SOURCES = ${GDEV_SOURCES}")
ENDIF()

SET(SUBPACKAGE_LIB_NAME gdev)

# Create the GDev library
ADD_LIBRARY(${SUBPACKAGE_LIB_NAME} ${GDEV_SOURCES})
TARGET_LINK_LIBRARIES(${SUBPACKAGE_LIB_NAME} ${SDL} ${SDL_IMG} ${SDL_FONT})